gst/isomp4/atoms.h
@@ -1044,6 +1044,8 @@ AtomInfo *   build_jp2h_extension        (gint width, gint height, const gchar *
 
 AtomInfo *   build_jp2x_extension        (const GstBuffer * prefix);
 AtomInfo *   build_fiel_extension        (gint fields);
+AtomInfo *   build_fiel_extension_prores (const gchar * interlace_mode, gboolean tff);
+AtomInfo *   build_colr_extension        (GstVideoColorimetry colorimetry);
 AtomInfo *   build_ac3_extension         (guint8 fscod, guint8 bsid,
                                           guint8 bsmod, guint8 acmod,
                                           guint8 lfe_on, guint8 bitrate_code);
